# PROYECTO-AED2

./: CMakeLists.txt  JUSTIFICACION.md  README.md  REPORTE.md  quadtree_sim.pro
include/: Benchmark.h  Geometria.h  Particula.h  QuadTree.h  Simulacion.h
qt/: LienzoSimulacion.cpp  LienzoSimulacion.h  VentanaPrincipal.cpp  VentanaPrincipal.h  main.cpp
src/: Benchmark.cpp  QuadTree.cpp  Simulacion.cpp  main_benchmark.cpp
